# Surv-IR

./: AGENT.md  CLAUDE.md  Cargo.toml  DIFF_IMPL_OPTIMIZATION_PLAN.md  DIFF_IMPL_PLASM_ANALYSIS.md  EXPORT_GUIDE.md  INTERACTIVE_HTML_GUIDE.md  PACKAGE_MANAGEMENT_PROPOSAL.md  README.md  Spec-Surv-IR-v1.1.md  SystemPrompt-Surv-IR-Author.md  note_weblog_english.md  note_weblog_sample_section.md  reddit_post.md  surc_split_spec.md  test_diff.toml  test_plasm_subset.toml
docs/: DEPLOY_IR_FOR_IMPLEMENTATION.md  DEPLOY_IR_GUIDE.md  IMPLEMENTATION_PLANNING.md  IR_DRIVEN_DEVELOPMENT.md  PATTERN_CATALOG.md
examples/: auth.toml  blog_sample_explanation.md  blog_sample_user_service.toml  deploy.toml  deploy_pipeline.html  interactive.html  multi_module_status.toml  output.html  surv.toml  todo_api.toml  todo_with_status.toml  user_api.toml
examples/patterns/: data_pipeline.toml  database.toml  event_driven.toml  rest_api.toml
src/: ast.rs  checker.rs  deps_commands.rs  diagnostic.rs  imports.rs  lib.rs  loader.rs  main.rs  manifest.rs  package.rs  parser.rs  project.rs  project_checker.rs  simple_toml.rs  split_commands.rs  status_commands.rs  symbol.rs
src/codegen/: github_actions.rs  gitlab_ci.rs  mod.rs
src/deploy/: ast.rs  checker.rs  mod.rs  parser.rs
src/diff_impl/: lsp_client.rs  matcher.rs  mod.rs  reporter.rs  types.rs
src/doc/: SYNTAX.bnf
src/export/: html.rs  mermaid.rs  mod.rs
test/: test_simple.toml  test_split_config.toml  test_split_input.toml
test_multipackage/: surv.toml
test_split_expected/: README.md
test_split_output/: surv.toml
(+10 files in other folders)
